assets/style.scss
@import "structure";
@import "@mesg-components/theme";


code {
  color: $purple;
  padding: .25rem .5rem;
  margin: 0;
  font-size: .85em;
  background-color: rgba(27,31,35,.05);
  border-radius: 3px;
}

.infos {
  font-size: 14px;
}

.white {
  color: $white!important;
}
.gold {
  color: $gold!important;
}
.success {
  color: $success!important;
}

/* Design styles */
img {
  max-width: 100%;
}

.inner-background {
  position: relative;
}
.inner-background::before {
  content: "";
  position: absolute;
  top: calc(#{$margin} * 4);
  bottom: calc(#{$margin} * 4);
  left: 0;
  width: 100%;
  z-index: -1;
  background-color: $grey-light;
}
.outer-background {
  padding-top: calc(#{$margin} * 4);
  padding-bottom:calc(#{$margin} * 4);
  background-image: linear-gradient(
    to top,
    $grey-light,
    $white
  );
}

hr {
  width: calc(#{$width} / 2);
  max-width: calc(#{$width} / 2);
  margin: auto;
  border:solid 0.5px;
  color: $lavender-light;
}


@media only screen and (max-width: $tablet-breakpoint) {
  .description {
    margin-bottom: 0 !important;
  }
  .outer-background {
  padding-top: $margin;
  padding-bottom: $margin;
  }
}
@media only screen and (max-width: $mobile-breakpoint) {
  header .btn--primary {
    margin-bottom: $margin;
  }
  header .btn-center {
    text-align: center;
  }
  #usecase .button {
    margin-top:$margin;
  }
  #faq .button {
    margin-top:$margin;
  }
  .outer-background {
  padding-top: $margin;
  padding-bottom: $margin;
  }
    hr {
    width: 100%;
    min-width: 100%;
  }
}

